--- a/main.html
+++ b/main.html
@@ -10,46 +10,21 @@
   <body>
     <main>
       <!-- solution start -->
-      .img1 {
-  content: url("https://picsum.photos/id/237/200/300");
-}
+      <!-- solution start -->
 
-.img2 {
-  content: url("https://picsum.photos/seed/picsum/200/300");
-}
+<h3 id="h">Please click on the identical tiles to verify that you are not a robot.</h3>
 
-.img3 {
-  content: url("https://picsum.photos/200/300?grayscale");
-}
-.img4 {
-  content: url("https://picsum.photos/200/300/");
-}
-.img5 {
-  content: url("https://picsum.photos/200/300.jpg");
-}
+<div class="flex" id="container"></div>
 
-img {
-  margin: 10px;
-  border: 5px solid #555;
-  width: 10%;
-}
+<div class="flex">
+  <button id="reset" style="display:none;">Reset</button>
+  <button id="verify" style="display:none;">Verify</button>
+</div>
 
-.flex {
-  display: flex;
-  justify-content: center;
-}
+<p id="para"></p>
 
-.selected {
-  border: 5px solid rgb(0, 195, 255);
-}
+<!-- solution end -->
 
-p {
-  text-align: center;
-}
-
-button {
-  margin: 20px;
-}
 
       <!-- solution end -->
     </main>
